[package]
name = "user_sites"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_http_server = { git = "https://github.com/dexgs/micro-http-server", branch = "master" }
bytes = "1.1.0"
anyhow = "1.0"
chrono = "0.4.19"
urlencoding = "2.1"
