[package]
name = "user_sites"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_http_server = { path = "micro-http-server" }
httpdate = "1.0.2"
anyhow = "1.0"
chrono = "0.4.19"
urlencoding = "2.1"
